<?xml version="1.0"?>
<package format="2">
  <name>ceres_ik_moveit_plugin</name>
  <version>0.0.1</version>
  <description>Moveit kinematics plugin using optimization-based IK.</description>

  <maintainer email="ros@martinoehler.de">Martin Oehler</maintainer>

  <license>TODO</license>


   <author email="ros@martinoehler.de">Martin Oehler</author>


  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <run_depend>message_runtime</run_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_core</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_msgs</depend>
  <depend>moveit_ros_planning</depend>
  <depend>ceres_catkin</depend>

  <export>
    <moveit_core plugin="${prefix}/ceres_ik_moveit_plugin_description.xml"/>
  </export>
</package>
